0.0.0/README.md
# songtradr_api_client_ruby

SongtradrApiClientRuby - the Ruby gem for the Songtradr API

This is the Songtradr API. Use it to retrieve deep music metadata and trigger processes like auto-tagging.

You can also use the API to manage your account and musicube cloud data.

**Authentication**

1. Reach out to support@songtradr.com to receive a free account or use your login data if you are already signed up.

2. To authenticate, you need to login via the POST /api/v1/user/login endpoint.

3. The endpoint responds with a jwtToken which you can use in all following API requests as a bearer token.

**Rate Limiting**

The current limit is 120 Requests per minute. Reach out to us via support@songtradr.com if you need to request more.

**Getting Started with auto-tagging**

1. If you want to get your own files auto-tagged, use the POST /api/v1/user/file/{name}/initUpload endpoint. It responds with a presigned S3 link where you can upload your file.
2. You can check the processing status of your file via the GET /api/v1/user/file/{name}/filesStatus endpoint.
3. As soon as processing is done, you can request the generated data via the GET /api/v1/user/files endpoint.

**Getting Started with search**

You can either search the released music via the /public/recording endpoints or your own private uploaded music via the /user/file/ endpoints.

1. If you want to search the world's released music, a good starting point is the GET /api/v1/public/recording/search endpoint. Please find the extensive list of parameters that serve as semantic search filters.
2. If you want to search your own previously uploaded music, a good starting point is the GET GET /api/v1/user/files endpoint. It has the same extensive list of parameters that serve as semantic search filters.

This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.12.21
- Package version: 0.0.0
- Build package: org.openapitools.codegen.languages.RubyClientCodegen
For more information, please visit [https://songtradr.com](https://songtradr.com)

## Installation

### Build a gem

To build the Ruby code into a gem:

```shell
gem build songtradr_api_client_ruby.gemspec
```

Then either install the gem locally:

```shell
gem install ./songtradr_api_client_ruby-0.0.0.gem
```

(for development, run `gem install --dev ./songtradr_api_client_ruby-0.0.0.gem` to install the development dependencies)

or publish the gem to a gem hosting service, e.g. [RubyGems](https://rubygems.org/).

Finally add this to the Gemfile:

    gem 'songtradr_api_client_ruby', '~> 0.0.0'

### Install from Git

If the Ruby gem is hosted at a git repository: https://github.com/GIT_USER_ID/GIT_REPO_ID, then add the following in the Gemfile:

    gem 'songtradr_api_client_ruby', :git => 'https://github.com/GIT_USER_ID/GIT_REPO_ID.git'

### Include the Ruby code directly

Include the Ruby code directly using `-I` as follows:

```shell
ruby -Ilib script.rb
```

## Getting Started

Please follow the [installation](#installation) procedure and then run the following code:

```ruby
# Load the gem
require 'songtradr_api_client_ruby'

api_instance = SongtradrApiClientRuby::AllowedValuesApi.new
opts = {
  response_size: 's' # String | Size the response should have.
}

begin
  #Allowed values for music descriptive parameters to be used in the searchAll endpoint.
  result = api_instance.allowed_musical_features(opts)
  p result
rescue SongtradrApiClientRuby::ApiError => e
  puts "Exception when calling AllowedValuesApi->allowed_musical_features: #{e}"
end

```

## Documentation for API Endpoints

All URIs are relative to *https://api.songtradr.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*SongtradrApiClientRuby::AllowedValuesApi* | [**allowed_musical_features**](docs/AllowedValuesApi.md#allowed_musical_features) | **GET** /api/v1/allowedValues/musicalFeatures | Allowed values for music descriptive parameters to be used in the searchAll endpoint.
*SongtradrApiClientRuby::AllowedValuesApi* | [**genres**](docs/AllowedValuesApi.md#genres) | **GET** /api/v1/allowedValues/genre | Allowed values for genres.
*SongtradrApiClientRuby::AllowedValuesApi* | [**tags**](docs/AllowedValuesApi.md#tags) | **GET** /api/v1/allowedValues/tag | All descriptive tags inside of tag-categories.
*SongtradrApiClientRuby::PartyApi* | [**party**](docs/PartyApi.md#party) | **GET** /api/v1/party | Information on a person, group or company.
*SongtradrApiClientRuby::PlaylistApi* | [**all_playlists**](docs/PlaylistApi.md#all_playlists) | **GET** /api/v1/playlist | All playlists.
*SongtradrApiClientRuby::PlaylistApi* | [**create_or_update_playlist**](docs/PlaylistApi.md#create_or_update_playlist) | **POST** /api/v1/playlist | Create and edit playlist.
*SongtradrApiClientRuby::PlaylistApi* | [**delete_playlist**](docs/PlaylistApi.md#delete_playlist) | **DELETE** /api/v1/playlist/{songtradrPlaylistGuid} | Delete playlist.
*SongtradrApiClientRuby::RecordingApi* | [**recordings_by_ids_with_musical_features**](docs/RecordingApi.md#recordings_by_ids_with_musical_features) | **GET** /api/v1/public/recording/{ids}/musicalFeatures | AI generated moods, musical features and more for recordings.
*SongtradrApiClientRuby::RecordingApi* | [**recordings_by_ids_with_similarities**](docs/RecordingApi.md#recordings_by_ids_with_similarities) | **GET** /api/v1/public/recording/{ids}/similarities | Similar recordings for a list of recordings.
*SongtradrApiClientRuby::RecordingApi* | [**recordings_by_ids_with_taggrams**](docs/RecordingApi.md#recordings_by_ids_with_taggrams) | **GET** /api/v1/public/recording/{ids}/taggrams | Timeseries of AI generated moods, musical features and more for a list of recordings.
*SongtradrApiClientRuby::RecordingApi* | [**recordings_by_ids_with_tagstrengths**](docs/RecordingApi.md#recordings_by_ids_with_tagstrengths) | **GET** /api/v1/public/recording/{ids}/tagstrengths | Strengths as numerical representations for AI generated moods, musical features and more for recordings.
*SongtradrApiClientRuby::RecordingApi* | [**recordings_large_by_ids**](docs/RecordingApi.md#recordings_large_by_ids) | **GET** /api/v1/public/recording/l/{ids} | Recordings by IDs with a large response.
*SongtradrApiClientRuby::RecordingApi* | [**recordings_medium_by_ids**](docs/RecordingApi.md#recordings_medium_by_ids) | **GET** /api/v1/public/recording/m/{ids} | Recordings by IDs with a medium sized response.
*SongtradrApiClientRuby::RecordingApi* | [**recordings_small_by_ids**](docs/RecordingApi.md#recordings_small_by_ids) | **GET** /api/v1/public/recording/s/{ids} | Recordings by IDs with a small response.
*SongtradrApiClientRuby::RecordingApi* | [**search_recordings**](docs/RecordingApi.md#search_recordings) | **GET** /api/v1/public/recording/search | Recordings by contributors, moods, musical features and more.
*SongtradrApiClientRuby::RecordingApi* | [**search_recordings_granular**](docs/RecordingApi.md#search_recordings_granular) | **POST** /api/v1/public/recording/searchGranular | Recordings by granular search options.
*SongtradrApiClientRuby::RecordingApi* | [**search_recordings_granular_abstraction**](docs/RecordingApi.md#search_recordings_granular_abstraction) | **POST** /api/v1/public/recording/searchGranularAbstraction | Recordings by abstracted wordings and granular search options.
*SongtradrApiClientRuby::UserApi* | [**create_user_referrer**](docs/UserApi.md#create_user_referrer) | **POST** /api/v1/user/referrers/new | 
*SongtradrApiClientRuby::UserApi* | [**delete_user_file**](docs/UserApi.md#delete_user_file) | **DELETE** /api/v1/user/file/{objectKey} | Delete file.
*SongtradrApiClientRuby::UserApi* | [**edit_me**](docs/UserApi.md#edit_me) | **POST** /api/v1/user/me | Edit details for a logged-in user
*SongtradrApiClientRuby::UserApi* | [**forgot_password**](docs/UserApi.md#forgot_password) | **POST** /api/v1/user/forgot-password | Send a password reset email
*SongtradrApiClientRuby::UserApi* | [**initiate_user_file_upload**](docs/UserApi.md#initiate_user_file_upload) | **POST** /api/v1/user/file/{name}/initUpload | Initialize a file upload. Responds with an URL where the file can be uploaded.
*SongtradrApiClientRuby::UserApi* | [**login**](docs/UserApi.md#login) | **POST** /api/v1/user/login | Login to generate a bearer token.
*SongtradrApiClientRuby::UserApi* | [**me**](docs/UserApi.md#me) | **GET** /api/v1/user/me | Details for a logged-in user
*SongtradrApiClientRuby::UserApi* | [**recordings_by_folder_with_taggrams**](docs/UserApi.md#recordings_by_folder_with_taggrams) | **GET** /api/v1/user/folder/{folderName}/taggrams | Timeseries of AI generated moods, musical features and more for recordings in your folder.
*SongtradrApiClientRuby::UserApi* | [**recordings_by_folder_with_tagstrengths**](docs/UserApi.md#recordings_by_folder_with_tagstrengths) | **GET** /api/v1/user/folder/{folderName}/tagstrengths | Strengths as numerical representations for AI generated moods, musical features and more for recordings in your folder.
*SongtradrApiClientRuby::UserApi* | [**save_playlist**](docs/UserApi.md#save_playlist) | **POST** /api/v1/user/savePlaylist | List, search and create playlist of your own files.
*SongtradrApiClientRuby::UserApi* | [**sign_up**](docs/UserApi.md#sign_up) | **POST** /api/v1/user/sign-up | Sign up a new user.
*SongtradrApiClientRuby::UserApi* | [**token**](docs/UserApi.md#token) | **POST** /api/v1/user/token | Generates a new JWT token for the given refresh token
*SongtradrApiClientRuby::UserApi* | [**update_password**](docs/UserApi.md#update_password) | **POST** /api/v1/user/update-password | Update password by using the password reset token
*SongtradrApiClientRuby::UserApi* | [**update_user_file_recording**](docs/UserApi.md#update_user_file_recording) | **POST** /api/v1/user/file/{objectKey} | Create and edit metadata of your files.
*SongtradrApiClientRuby::UserApi* | [**user_file**](docs/UserApi.md#user_file) | **GET** /api/v1/user/file/{objectKey} | Details and a download link for a file.
*SongtradrApiClientRuby::UserApi* | [**user_files**](docs/UserApi.md#user_files) | **GET** /api/v1/user/files | List and search your own files.
*SongtradrApiClientRuby::UserApi* | [**user_files_download**](docs/UserApi.md#user_files_download) | **GET** /api/v1/user/filesDownload | Download links for your files
*SongtradrApiClientRuby::UserApi* | [**user_files_status**](docs/UserApi.md#user_files_status) | **GET** /api/v1/user/filesStatus | Status details for files.
*SongtradrApiClientRuby::UserApi* | [**user_files_summary**](docs/UserApi.md#user_files_summary) | **GET** /api/v1/user/filesSummary | Summary fo your files.
*SongtradrApiClientRuby::UserApi* | [**user_folders**](docs/UserApi.md#user_folders) | **GET** /api/v1/user/folders | Your Folders
*SongtradrApiClientRuby::UserApi* | [**user_referrers**](docs/UserApi.md#user_referrers) | **GET** /api/v1/user/referrers/{username} | 


## Documentation for Models

 - [SongtradrApiClientRuby::CategoryMediumDTO](docs/CategoryMediumDTO.md)
 - [SongtradrApiClientRuby::CategoryMinimalDTO](docs/CategoryMinimalDTO.md)
 - [SongtradrApiClientRuby::ConfigAccessDTO](docs/ConfigAccessDTO.md)
 - [SongtradrApiClientRuby::ConfigIdentifierDTO](docs/ConfigIdentifierDTO.md)
 - [SongtradrApiClientRuby::ContributorTypeDTO](docs/ContributorTypeDTO.md)
 - [SongtradrApiClientRuby::ErrorResponse](docs/ErrorResponse.md)
 - [SongtradrApiClientRuby::FieldSummaryDTO](docs/FieldSummaryDTO.md)
 - [SongtradrApiClientRuby::FileDTO](docs/FileDTO.md)
 - [SongtradrApiClientRuby::FileListDTO](docs/FileListDTO.md)
 - [SongtradrApiClientRuby::FileMinimalWithUrlDTO](docs/FileMinimalWithUrlDTO.md)
 - [SongtradrApiClientRuby::FileSmallDTO](docs/FileSmallDTO.md)
 - [SongtradrApiClientRuby::FileUploadDTO](docs/FileUploadDTO.md)
 - [SongtradrApiClientRuby::FileWIthUrlDTO](docs/FileWIthUrlDTO.md)
 - [SongtradrApiClientRuby::FilesSummaryDTO](docs/FilesSummaryDTO.md)
 - [SongtradrApiClientRuby::ForgotPasswordDTO](docs/ForgotPasswordDTO.md)
 - [SongtradrApiClientRuby::GenreDTO](docs/GenreDTO.md)
 - [SongtradrApiClientRuby::GenreMinimalDTO](docs/GenreMinimalDTO.md)
 - [SongtradrApiClientRuby::GenresSummaryDTO](docs/GenresSummaryDTO.md)
 - [SongtradrApiClientRuby::InitPutRecordingAudioDTO](docs/InitPutRecordingAudioDTO.md)
 - [SongtradrApiClientRuby::JwtTokenDTO](docs/JwtTokenDTO.md)
 - [SongtradrApiClientRuby::LoginDTO](docs/LoginDTO.md)
 - [SongtradrApiClientRuby::MusicalFeaturesDTO](docs/MusicalFeaturesDTO.md)
 - [SongtradrApiClientRuby::PLineDTO](docs/PLineDTO.md)
 - [SongtradrApiClientRuby::PartyLargeDTO](docs/PartyLargeDTO.md)
 - [SongtradrApiClientRuby::PartySmallDTO](docs/PartySmallDTO.md)
 - [SongtradrApiClientRuby::PlaylistLargeDTO](docs/PlaylistLargeDTO.md)
 - [SongtradrApiClientRuby::ProductMediumDTO](docs/ProductMediumDTO.md)
 - [SongtradrApiClientRuby::ProductPartyDTO](docs/ProductPartyDTO.md)
 - [SongtradrApiClientRuby::RecordingForSimilaritySearchDTO](docs/RecordingForSimilaritySearchDTO.md)
 - [SongtradrApiClientRuby::RecordingGenrePredictionDTO](docs/RecordingGenrePredictionDTO.md)
 - [SongtradrApiClientRuby::RecordingLargeDTO](docs/RecordingLargeDTO.md)
 - [SongtradrApiClientRuby::RecordingListDTO](docs/RecordingListDTO.md)
 - [SongtradrApiClientRuby::RecordingMediumDTO](docs/RecordingMediumDTO.md)
 - [SongtradrApiClientRuby::RecordingMinimalWithMusicalFeaturesDTO](docs/RecordingMinimalWithMusicalFeaturesDTO.md)
 - [SongtradrApiClientRuby::RecordingMinimalWithTaggramsDTO](docs/RecordingMinimalWithTaggramsDTO.md)
 - [SongtradrApiClientRuby::RecordingMinimalWithTagstrengthsDTO](docs/RecordingMinimalWithTagstrengthsDTO.md)
 - [SongtradrApiClientRuby::RecordingPartyDTO](docs/RecordingPartyDTO.md)
 - [SongtradrApiClientRuby::RecordingPlaylistDTO](docs/RecordingPlaylistDTO.md)
 - [SongtradrApiClientRuby::RecordingSmallDTO](docs/RecordingSmallDTO.md)
 - [SongtradrApiClientRuby::RecordingTagSmallDTO](docs/RecordingTagSmallDTO.md)
 - [SongtradrApiClientRuby::SaveFileRecordingDTO](docs/SaveFileRecordingDTO.md)
 - [SongtradrApiClientRuby::SavePlaylistDTO](docs/SavePlaylistDTO.md)
 - [SongtradrApiClientRuby::SaveRecordingGenreDTO](docs/SaveRecordingGenreDTO.md)
 - [SongtradrApiClientRuby::SaveRecordingPartyDTO](docs/SaveRecordingPartyDTO.md)
 - [SongtradrApiClientRuby::SaveRecordingPlaylistDTO](docs/SaveRecordingPlaylistDTO.md)
 - [SongtradrApiClientRuby::SaveRecordingTagDTO](docs/SaveRecordingTagDTO.md)
 - [SongtradrApiClientRuby::SaveReferrerDTO](docs/SaveReferrerDTO.md)
 - [SongtradrApiClientRuby::SaveTaggramsDTO](docs/SaveTaggramsDTO.md)
 - [SongtradrApiClientRuby::SaveUserDTO](docs/SaveUserDTO.md)
 - [SongtradrApiClientRuby::SearchFilterValuesDTO](docs/SearchFilterValuesDTO.md)
 - [SongtradrApiClientRuby::SearchRecordingGranularAbstractionDTO](docs/SearchRecordingGranularAbstractionDTO.md)
 - [SongtradrApiClientRuby::SearchRecordingGranularDTO](docs/SearchRecordingGranularDTO.md)
 - [SongtradrApiClientRuby::SignUpDTO](docs/SignUpDTO.md)
 - [SongtradrApiClientRuby::TagDTO](docs/TagDTO.md)
 - [SongtradrApiClientRuby::TagSmallDTO](docs/TagSmallDTO.md)
 - [SongtradrApiClientRuby::TaggramDTO](docs/TaggramDTO.md)
 - [SongtradrApiClientRuby::TagsSummaryDTO](docs/TagsSummaryDTO.md)
 - [SongtradrApiClientRuby::TagstrengthDTO](docs/TagstrengthDTO.md)
 - [SongtradrApiClientRuby::TitleDTO](docs/TitleDTO.md)
 - [SongtradrApiClientRuby::TokenRequest](docs/TokenRequest.md)
 - [SongtradrApiClientRuby::TrackToMediumProductDTO](docs/TrackToMediumProductDTO.md)
 - [SongtradrApiClientRuby::UpdatePasswordDTO](docs/UpdatePasswordDTO.md)
 - [SongtradrApiClientRuby::UsageDTO](docs/UsageDTO.md)
 - [SongtradrApiClientRuby::UserDTO](docs/UserDTO.md)


## Documentation for Authorization


Authentication schemes defined for the API:
### bearer-jwt

- **Type**: Bearer authentication (JWT)

